# fastapi-mysql-template

./: README.md  cli.py  conftest.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  unit_of_work.py
configs/: task-definition.json
src/: __init__.py
src/core/: enum.py  exception.py  exception_handler.py  log.py  orm.py
src/models/: __init__.py  request.py  response.py
src/routers/: home.py
src/schemas/: base.py
src/settings/: __init__.py  database.py  logger.py  router.py  ssh_tunnel.py  test.py
src/utils/: converter.py  encrypt_sdk.py  kms.py  s3_bucket.py
