[tool.poetry]
name = "backend-service-template"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
boto3 = "^1.28.83"
pytest = "^7.4.3"
sqlalchemy = "^2.0.23"
greenlet="^3.0.1"
aiomysql ="^0.2.0"
pymysql = "^1.1.0"
finite-state-machine = "^0.5.0"
uvicorn = "^0.24.0.post1"
typer = "^0.9.0"
sshtunnel = "^0.4.0"
watchtower = "^3.0.1"
orjson = "^3.9.10"
pydantic="^1.8.2"
pydantic-factories = "^1.4.1"
httpx = "^0.25.1"
aws-encryption-sdk = "^3.1.1"
factory-boy="^3.2.0"
Pillow="^9.5.0"
pytest-asyncio="^0.20.1"
pytest-httpx="^0.27.0"
pytest-mock="^3.7.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
